@@ -1,0 +1,66 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+<HEAD>
+<TITLE>iTerm: Screenshots</TITLE>
+</HEAD>
+
+<BODY BGCOLOR="#FFFFFF" LINK="#696969" ALINK="#696969" VLINK="#696969">
+<LINK REL=stylesheet HREF="styles.css" TYPE="text/css">
+<CENTER>
+<!--#include virtual="/header.html" -->
+
+<TABLE BGCOLOR="#000000" CELLPADDING="10" CELLSPACING="1" BORDER="0" WIDTH="100%">
+<TR>
+<TD VALIGN="TOP" WIDTH="300" BGCOLOR="#FFFFFF">
+<!--#include virtual="/sidebar.html" -->
+
+</TD>
+
+
+
+<TD VALIGN="TOP" BGCOLOR="#FFFFFF">
+<FONT SIZE="5"><STRONG>Version 0.9.0:</STRONG></FONT><BR>
+Running vi.
+<UL><A HREF="vi_090.jpg"><IMG src="vi_090_m.jpg" ALT="screen shot"></A></UL>
+
+<FONT SIZE="5"><STRONG>Version 0.8.0:</STRONG></FONT><BR>
+Running mc under a session that ssh to a Linux system.
+<UL><A HREF="screenshot2.jpg"><IMG src="screenshot2-m.jpg" ALT="screen shot"></A></UL>
+
+<FONT SIZE="5"><STRONG>Version 0.8.0:</STRONG></FONT><BR>
+Custom keymapping dialog
+<UL><A HREF="keymap.jpg"><IMG src="keymap-m.jpg" ALT="screen shot"></A></UL>
+
+<FONT SIZE="5"><STRONG>Version 0.8.0:</STRONG></FONT><BR>
+Non monospace fonts work too now
+<UL><A HREF="funnyfont.jpg"><IMG src="funnyfont-m.jpg" ALT="screen shot"></A></UL>
+
+<FONT SIZE="5"><STRONG>Version 0.7.8:</STRONG></FONT><BR>
+Running vi with syntax highlighting. Background window displays Chinese with complex ANSI graphics.
+<UL><A HREF="screenshot.jpg"><IMG src="screenshot-mini.jpg" ALT="screen shot"></A></UL>
+
+</TD>
+<TD VALIGN="TOP" BGCOLOR="#FFFFFF">
+<script type="text/javascript"><!--
+google_ad_client = "pub-5743532873543938";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_color_border = "B0E0E6";
+google_color_bg = "ffffff";
+google_color_link = "000000";
+google_color_url = "336699";
+google_color_text = "333333";
+//--></script>
+<script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</TD>
+</TR>
+</TABLE>
+
+<!--#include virtual="/footer.html" -->
+
+</CENTER>
+</BODY>
+</HTML>
